syntax = "proto3";
import "proto/v1/model/error/error.proto";

package proto.v1.model.user;
option go_package = "finalProject/cmd/service/grpc-model/user";

message DeleteUserReq {
  int32 id = 1;
}

message DeleteUserRes {
  proto.v1.model.error.Error  error = 1;
}

message CreateUserReq {
  string email = 1;
  string password = 2;
  string name = 3;
}

message CreateUserRes {
  User user = 1;
  repeated  proto.v1.model.error.Error error = 2;
}

message GetUserReq{
  int32 id = 1;
}

message GetUserRes {
  User user = 1;
  proto.v1.model.error.Error error = 2;
}

message User {
  int32 id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
}