syntax = "proto3";
import "proto/v1/model/user/user.proto";
package proto.v1.userService;
option go_package = "service/user/service";

service UserService {
  rpc RegisterUser(proto.v1.model.user.CreateUserReq) returns(proto.v1.model.user.CreateUserRes);
  rpc Login(proto.v1.model.user.GetUserReq) returns(proto.v1.model.user.GetUserRes);

  rpc DeleteUser(proto.v1.model.user.DeleteUserReq) returns(proto.v1.model.user.DeleteUserRes);
  rpc GetUser(proto.v1.model.user.GetUserReq) returns(proto.v1.model.user.GetUserRes);
  rpc GetUserByEmail(proto.v1.model.user.GetUserByEmailReq) returns(proto.v1.model.user.GetUserRes);
}
